--- a/LearningToListen/app/src/main/res/layout/activity_start.xml
+++ b/LearningToListen/app/src/main/res/layout/activity_start.xml
@@ -4,55 +4,59 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:background="@color/colorBackground">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Learning to Listen"
+        android:text="@string/title"
         android:textSize="6mm"
         android:textColor="#050505"
-        android:id="@+id/textView"
+        android:id="@+id/textView_title"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp" />
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/button1"
-        android:layout_below="@+id/textView"
-        android:background="@drawable/roundedbutton"
+        android:id="@+id/button_play"
+        android:layout_below="@+id/textView_title"
+        android:background="@drawable/rounded_button"
         android:layout_marginTop="65dp"
-        android:text="PLAY"
+        android:text="@string/play"
         android:textSize="4mm"
-        android:layout_alignLeft="@+id/textView"
-        android:layout_alignStart="@+id/textView"
-        android:layout_alignRight="@+id/textView"
-        android:layout_alignEnd="@+id/textView" />
+        android:layout_alignLeft="@+id/textView_title"
+        android:layout_alignStart="@+id/textView_title"
+        android:layout_alignRight="@+id/textView_title"
+        android:layout_alignEnd="@+id/textView_title"
+        android:onClick="onClickPlay"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/button2"
-        android:background="@drawable/roundedbutton"
+        android:id="@+id/button_setting"
+        android:background="@drawable/rounded_button"
         android:layout_marginTop="65dp"
-        android:text="SETINGS"
+        android:text="@string/setting"
         android:textSize="4mm"
-        android:layout_below="@+id/button1"
-        android:layout_alignLeft="@+id/button1"
-        android:layout_alignStart="@+id/button1"
-        android:layout_alignRight="@+id/button1"
-        android:layout_alignEnd="@+id/button1" />
+        android:layout_below="@+id/button_play"
+        android:layout_alignLeft="@+id/button_play"
+        android:layout_alignStart="@+id/button_play"
+        android:layout_alignRight="@+id/button_play"
+        android:layout_alignEnd="@+id/button_play"
+        android:onClick="onClickSetting"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/button3"
-        android:background="@drawable/roundedbutton"
-        android:text="INFO"
+        android:id="@+id/button_information"
+        android:background="@drawable/rounded_button"
+        android:text="@string/information"
         android:textSize="4mm"
         android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/button2"
-        android:layout_alignStart="@+id/button2"
+        android:layout_alignLeft="@+id/button_setting"
+        android:layout_alignStart="@+id/button_setting"
         android:layout_marginBottom="64dp"
-        android:layout_alignRight="@+id/button2"
-        android:layout_alignEnd="@+id/button2" />
+        android:layout_alignRight="@+id/button_setting"
+        android:layout_alignEnd="@+id/button_setting"
+        android:onClick="onClickGetInfo" />
 </RelativeLayout>
