--- a/LearningToListen/app/src/main/res/layout/activity_info.xml
+++ b/LearningToListen/app/src/main/res/layout/activity_info.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/title_information"
-        android:id="@+id/textView2"
+        android:id="@+id/title_information"
         android:textSize="6mm"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -24,8 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/content_information"
-        android:id="@+id/textView3"
-        android:layout_below="@+id/textView2"
+        android:id="@+id/information"
+        android:layout_below="@+id/title_information"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp" />
 
