--- a/LearningToListen/app/src/main/res/layout/activity_settings.xml
+++ b/LearningToListen/app/src/main/res/layout/activity_settings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -98,6 +98,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/imageButtonDog"
                 android:layout_alignRight="@+id/imageButtonDog"
+                android:visibility="invisible"
                 android:src="@drawable/check_mark" />
 
             <ImageView
@@ -106,6 +107,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/imageButtonCat"
                 android:layout_alignRight="@+id/imageButtonCat"
+                android:visibility="invisible"
                 android:src="@drawable/check_mark" />
 
             <ImageView
@@ -114,6 +116,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/imageButtonDuck"
                 android:layout_alignRight="@+id/imageButtonDuck"
+                android:visibility="invisible"
                 android:src="@drawable/check_mark" />
 
             <ImageView
@@ -122,6 +125,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/imageButtonPig"
                 android:layout_alignRight="@+id/imageButtonPig"
+                android:visibility="invisible"
                 android:src="@drawable/check_mark" />
 
             <ImageView
@@ -130,6 +134,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/imageButtonCow"
                 android:layout_alignRight="@+id/imageButtonCow"
+                android:visibility="invisible"
                 android:src="@drawable/check_mark" />
 
             <ImageView
@@ -138,6 +143,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/imageButtonSheep"
                 android:layout_alignRight="@+id/imageButtonSheep"
+                android:visibility="invisible"
                 android:src="@drawable/check_mark" />
 
             <TextView
@@ -188,6 +194,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/imageButtonChild"
                 android:layout_alignRight="@+id/imageButtonChild"
+                android:visibility="invisible"
                 android:src="@drawable/check_mark" />
 
             <ImageView
@@ -196,6 +203,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/imageButtonWoman"
                 android:layout_alignRight="@+id/imageButtonWoman"
+                android:visibility="invisible"
                 android:src="@drawable/check_mark" />
 
             <ImageView
@@ -204,6 +212,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/imageButtonMan"
                 android:layout_alignRight="@+id/imageButtonMan"
+                android:visibility="invisible"
                 android:src="@drawable/check_mark" />
 
             <TextView
