--- a/LearningToListen/app/src/main/res/layout/activity_medium_mode.xml
+++ b/LearningToListen/app/src/main/res/layout/activity_medium_mode.xml
@@ -16,165 +16,178 @@
         android:id="@+id/imageView"
         android:layout_width="90dp"
         android:layout_height="150dp"
-        android:layout_centerHorizontal="true"
+        android:src="@drawable/dog_medium_mode"
         android:layout_centerVertical="true"
-        android:src="@drawable/dog_medium_mode" />
+        android:layout_centerHorizontal="true" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/red_8"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_below="@+id/imageView"
-        android:layout_toLeftOf="@+id/imageView"
-        android:layout_toStartOf="@+id/imageView"
+        android:onClick="onClick"
         android:background="@drawable/button_red"
         android:clickable="true"
         android:text="8"
         android:textColor="#FCFF35"
-        android:textSize="30dp" />
+        android:textSize="30dp"
+        android:layout_below="@+id/blue_8"
+        android:layout_toLeftOf="@+id/blue_8"
+        android:layout_toStartOf="@+id/blue_8" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/blue_8"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:onClick="onClick"
+        android:background="@drawable/button_blue"
+        android:clickable="true"
+        android:text="8"
+        android:textColor="#FCFF35"
+        android:textSize="30dp"
+        android:layout_below="@+id/imageView"
+        android:layout_toLeftOf="@+id/imageView"
+        android:layout_toStartOf="@+id/imageView" />
+
+    <Button
+        android:id="@+id/black_8"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:onClick="onClick"
+        android:background="@drawable/button_black"
+        android:clickable="true"
+        android:text="8"
+        android:textColor="#FCFF35"
+        android:textSize="30dp"
+        android:layout_alignBottom="@+id/imageView"
+        android:layout_alignLeft="@+id/red_8"
+        android:layout_alignStart="@+id/red_8" />
+
+    <Button
+        android:id="@+id/white_8"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:onClick="onClick"
+        android:background="@drawable/button_white"
+        android:clickable="true"
+        android:text="8"
+        android:textColor="#FCFF35"
+        android:textSize="30dp"
         android:layout_above="@+id/imageView"
+        android:layout_toRightOf="@+id/blue_8"
         android:layout_toLeftOf="@+id/imageView"
-        android:layout_toStartOf="@+id/imageView"
-        android:background="@drawable/button_blue"
-        android:clickable="true"
-        android:text="8"
-        android:textColor="#FCFF35"
-        android:textSize="30dp" />
+        android:layout_toStartOf="@+id/imageView" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/pink_8"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_above="@+id/button11"
-        android:layout_toLeftOf="@+id/button2"
-        android:layout_toStartOf="@+id/button2"
-        android:background="@drawable/button_black"
-        android:clickable="true"
-        android:text="8"
-        android:textColor="#FCFF35"
-        android:textSize="30dp" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_above="@+id/button2"
-        android:layout_toLeftOf="@+id/button2"
-        android:layout_toStartOf="@+id/button2"
-        android:background="@drawable/button_white"
-        android:clickable="true"
-        android:text="8"
-        android:textColor="#FCFF35"
-        android:textSize="30dp" />
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_above="@+id/button6"
-        android:layout_toLeftOf="@+id/imageView"
-        android:layout_toStartOf="@+id/imageView"
+        android:onClick="onClick"
         android:background="@drawable/button_pink"
         android:clickable="true"
         android:text="8"
         android:textColor="#FCFF35"
-        android:textSize="30dp" />
+        android:textSize="30dp"
+        android:layout_above="@+id/black_8"
+        android:layout_toLeftOf="@+id/imageView"
+        android:layout_toStartOf="@+id/imageView" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/green_8"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_above="@+id/button1"
-        android:layout_toLeftOf="@+id/button5"
-        android:layout_toStartOf="@+id/button5"
+        android:onClick="onClick"
         android:background="@drawable/button_green"
         android:clickable="true"
         android:text="8"
         android:textColor="#FCFF35"
-        android:textSize="30dp" />
+        android:textSize="30dp"
+        android:layout_below="@+id/white_8"
+        android:layout_toLeftOf="@+id/pink_8"
+        android:layout_toStartOf="@+id/pink_8" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/red_2"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_below="@+id/imageView"
-        android:layout_toEndOf="@+id/imageView"
-        android:layout_toRightOf="@+id/imageView"
+        android:onClick="onClick"
         android:background="@drawable/button_red"
         android:clickable="true"
         android:text="2"
         android:textColor="#FCFF35"
-        android:textSize="30dp" />
+        android:textSize="30dp"
+        android:layout_below="@+id/blue_8"
+        android:layout_toRightOf="@+id/blue_2"
+        android:layout_toEndOf="@+id/blue_2" />
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/blue_2"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_below="@+id/button4"
-        android:layout_toEndOf="@+id/imageView"
-        android:layout_toRightOf="@+id/imageView"
+        android:onClick="onClick"
         android:background="@drawable/button_blue"
         android:clickable="true"
         android:text="2"
         android:textColor="#FCFF35"
-        android:textSize="30dp" />
+        android:textSize="30dp"
+        android:layout_below="@+id/black_2"
+        android:layout_alignLeft="@+id/white_2"
+        android:layout_alignStart="@+id/white_2" />
 
     <Button
-        android:id="@+id/button9"
+        android:id="@+id/black_2"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_above="@+id/button11"
-        android:layout_toEndOf="@+id/button11"
-        android:layout_toRightOf="@+id/button11"
+        android:onClick="onClick"
         android:background="@drawable/button_black"
         android:clickable="true"
         android:text="2"
         android:textColor="#FCFF35"
-        android:textSize="30dp" />
+        android:textSize="30dp"
+        android:layout_above="@+id/blue_8"
+        android:layout_toRightOf="@+id/blue_2"
+        android:layout_toEndOf="@+id/blue_2" />
 
     <Button
-        android:id="@+id/button10"
+        android:id="@+id/white_2"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_above="@+id/button8"
-        android:layout_alignLeft="@+id/button9"
-        android:layout_alignStart="@+id/button9"
+        android:onClick="onClick"
         android:background="@drawable/button_white"
         android:clickable="true"
         android:text="2"
         android:textColor="#FCFF35"
-        android:textSize="30dp" />
+        android:textSize="30dp"
+        android:layout_above="@+id/imageView"
+        android:layout_toRightOf="@+id/imageView"
+        android:layout_toEndOf="@+id/imageView" />
 
     <Button
-        android:id="@+id/button11"
+        android:id="@+id/pink_2"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_alignTop="@+id/button5"
-        android:layout_toEndOf="@+id/imageView"
-        android:layout_toRightOf="@+id/imageView"
+        android:onClick="onClick"
         android:background="@drawable/button_pink"
         android:clickable="true"
         android:text="2"
         android:textColor="#FCFF35"
-        android:textSize="30dp" />
+        android:textSize="30dp"
+        android:layout_above="@+id/black_2"
+        android:layout_toRightOf="@+id/imageView"
+        android:layout_toEndOf="@+id/imageView" />
 
     <Button
-        android:id="@+id/button12"
+        android:id="@+id/green_2"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_below="@+id/button11"
-        android:layout_toEndOf="@+id/button11"
-        android:layout_toRightOf="@+id/button11"
+        android:onClick="onClick"
         android:background="@drawable/button_green"
         android:clickable="true"
         android:text="2"
         android:textColor="#FCFF35"
-        android:textSize="30dp" />
+        android:textSize="30dp"
+        android:layout_above="@+id/pink_2"
+        android:layout_toRightOf="@+id/pink_2"
+        android:layout_toEndOf="@+id/pink_2" />
 
 
 </RelativeLayout>
