--- a/LearningToListen/app/src/main/res/layout/activity_medium_mode.xml
+++ b/LearningToListen/app/src/main/res/layout/activity_medium_mode.xml
@@ -13,181 +13,181 @@
 
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/animal_medium"
         android:layout_width="90dp"
         android:layout_height="150dp"
-        android:src="@drawable/dog_medium_mode"
+        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:src="@drawable/dog_medium_mode" />
 
     <Button
         android:id="@+id/red_8"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:onClick="onClick"
-        android:background="@drawable/button_red"
-        android:clickable="true"
-        android:text="8"
-        android:textColor="#FCFF35"
-        android:textSize="30dp"
         android:layout_below="@+id/blue_8"
         android:layout_toLeftOf="@+id/blue_8"
-        android:layout_toStartOf="@+id/blue_8" />
+        android:layout_toStartOf="@+id/blue_8"
+        android:background="@drawable/button_red"
+        android:clickable="true"
+        android:onClick="onClick"
+        android:text="8"
+        android:textColor="#FCFF35"
+        android:textSize="30dp" />
 
     <Button
         android:id="@+id/blue_8"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:onClick="onClick"
+        android:layout_below="@+id/animal_medium"
+        android:layout_toLeftOf="@+id/animal_medium"
+        android:layout_toStartOf="@+id/animal_medium"
         android:background="@drawable/button_blue"
         android:clickable="true"
+        android:onClick="onClick"
         android:text="8"
         android:textColor="#FCFF35"
-        android:textSize="30dp"
-        android:layout_below="@+id/imageView"
-        android:layout_toLeftOf="@+id/imageView"
-        android:layout_toStartOf="@+id/imageView" />
+        android:textSize="30dp" />
 
     <Button
         android:id="@+id/black_8"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:onClick="onClick"
+        android:layout_alignBottom="@+id/animal_medium"
+        android:layout_alignLeft="@+id/red_8"
+        android:layout_alignStart="@+id/red_8"
         android:background="@drawable/button_black"
         android:clickable="true"
+        android:onClick="onClick"
         android:text="8"
         android:textColor="#FCFF35"
-        android:textSize="30dp"
-        android:layout_alignBottom="@+id/imageView"
-        android:layout_alignLeft="@+id/red_8"
-        android:layout_alignStart="@+id/red_8" />
+        android:textSize="30dp" />
 
     <Button
         android:id="@+id/white_8"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:onClick="onClick"
+        android:layout_above="@+id/animal_medium"
+        android:layout_toLeftOf="@+id/animal_medium"
+        android:layout_toRightOf="@+id/blue_8"
+        android:layout_toStartOf="@+id/animal_medium"
         android:background="@drawable/button_white"
         android:clickable="true"
+        android:onClick="onClick"
         android:text="8"
         android:textColor="#FCFF35"
-        android:textSize="30dp"
-        android:layout_above="@+id/imageView"
-        android:layout_toRightOf="@+id/blue_8"
-        android:layout_toLeftOf="@+id/imageView"
-        android:layout_toStartOf="@+id/imageView" />
+        android:textSize="30dp" />
 
     <Button
         android:id="@+id/pink_8"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:onClick="onClick"
+        android:layout_above="@+id/black_8"
+        android:layout_toLeftOf="@+id/animal_medium"
+        android:layout_toStartOf="@+id/animal_medium"
         android:background="@drawable/button_pink"
         android:clickable="true"
+        android:onClick="onClick"
         android:text="8"
         android:textColor="#FCFF35"
-        android:textSize="30dp"
-        android:layout_above="@+id/black_8"
-        android:layout_toLeftOf="@+id/imageView"
-        android:layout_toStartOf="@+id/imageView" />
+        android:textSize="30dp" />
 
     <Button
         android:id="@+id/green_8"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:onClick="onClick"
-        android:background="@drawable/button_green"
-        android:clickable="true"
-        android:text="8"
-        android:textColor="#FCFF35"
-        android:textSize="30dp"
         android:layout_below="@+id/white_8"
         android:layout_toLeftOf="@+id/pink_8"
-        android:layout_toStartOf="@+id/pink_8" />
+        android:layout_toStartOf="@+id/pink_8"
+        android:background="@drawable/button_green"
+        android:clickable="true"
+        android:onClick="onClick"
+        android:text="8"
+        android:textColor="#FCFF35"
+        android:textSize="30dp" />
 
     <Button
         android:id="@+id/red_2"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:onClick="onClick"
+        android:layout_below="@+id/blue_8"
+        android:layout_toEndOf="@+id/blue_2"
+        android:layout_toRightOf="@+id/blue_2"
         android:background="@drawable/button_red"
         android:clickable="true"
+        android:onClick="onClick"
         android:text="2"
         android:textColor="#FCFF35"
-        android:textSize="30dp"
-        android:layout_below="@+id/blue_8"
-        android:layout_toRightOf="@+id/blue_2"
-        android:layout_toEndOf="@+id/blue_2" />
+        android:textSize="30dp" />
 
     <Button
         android:id="@+id/blue_2"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:onClick="onClick"
+        android:layout_alignLeft="@+id/white_2"
+        android:layout_alignStart="@+id/white_2"
+        android:layout_below="@+id/black_2"
         android:background="@drawable/button_blue"
         android:clickable="true"
+        android:onClick="onClick"
         android:text="2"
         android:textColor="#FCFF35"
-        android:textSize="30dp"
-        android:layout_below="@+id/black_2"
-        android:layout_alignLeft="@+id/white_2"
-        android:layout_alignStart="@+id/white_2" />
+        android:textSize="30dp" />
 
     <Button
         android:id="@+id/black_2"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:onClick="onClick"
+        android:layout_above="@+id/blue_8"
+        android:layout_toEndOf="@+id/blue_2"
+        android:layout_toRightOf="@+id/blue_2"
         android:background="@drawable/button_black"
         android:clickable="true"
+        android:onClick="onClick"
         android:text="2"
         android:textColor="#FCFF35"
-        android:textSize="30dp"
-        android:layout_above="@+id/blue_8"
-        android:layout_toRightOf="@+id/blue_2"
-        android:layout_toEndOf="@+id/blue_2" />
+        android:textSize="30dp" />
 
     <Button
         android:id="@+id/white_2"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:onClick="onClick"
+        android:layout_above="@+id/animal_medium"
+        android:layout_toEndOf="@+id/animal_medium"
+        android:layout_toRightOf="@+id/animal_medium"
         android:background="@drawable/button_white"
         android:clickable="true"
+        android:onClick="onClick"
         android:text="2"
         android:textColor="#FCFF35"
-        android:textSize="30dp"
-        android:layout_above="@+id/imageView"
-        android:layout_toRightOf="@+id/imageView"
-        android:layout_toEndOf="@+id/imageView" />
+        android:textSize="30dp" />
 
     <Button
         android:id="@+id/pink_2"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:onClick="onClick"
+        android:layout_above="@+id/black_2"
+        android:layout_toEndOf="@+id/animal_medium"
+        android:layout_toRightOf="@+id/animal_medium"
         android:background="@drawable/button_pink"
         android:clickable="true"
+        android:onClick="onClick"
         android:text="2"
         android:textColor="#FCFF35"
-        android:textSize="30dp"
-        android:layout_above="@+id/black_2"
-        android:layout_toRightOf="@+id/imageView"
-        android:layout_toEndOf="@+id/imageView" />
+        android:textSize="30dp" />
 
     <Button
         android:id="@+id/green_2"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:onClick="onClick"
+        android:layout_above="@+id/pink_2"
+        android:layout_toEndOf="@+id/pink_2"
+        android:layout_toRightOf="@+id/pink_2"
         android:background="@drawable/button_green"
         android:clickable="true"
+        android:onClick="onClick"
         android:text="2"
         android:textColor="#FCFF35"
-        android:textSize="30dp"
-        android:layout_above="@+id/pink_2"
-        android:layout_toRightOf="@+id/pink_2"
-        android:layout_toEndOf="@+id/pink_2" />
+        android:textSize="30dp" />
 
 
 </RelativeLayout>
