--- a/LearningToListen/app/src/main/res/layout/activity_easy_mode.xml
+++ b/LearningToListen/app/src/main/res/layout/activity_easy_mode.xml
@@ -3,67 +3,65 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorBackground"
     android:weightSum="1">
 
     <ImageView
         android:id="@+id/animal_easy"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_gravity="center"
-        android:layout_marginTop="31dp"
-        android:src="@drawable/dog_medium_mode" />
+        android:src="@drawable/dog_medium_mode"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/red_8e"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/animal_easy"
-        android:layout_marginTop="51dp"
-        android:layout_toLeftOf="@+id/animal_easy"
-        android:layout_toStartOf="@+id/animal_easy"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:background="@drawable/button_red"
         android:contextClickable="true"
         android:text="8"
         android:textColor="#FF00FFD4"
         android:textSize="25dp"
-        android:onClick="onClickEasy" />
-
+        android:onClick="onClickEasy"
+        android:layout_marginBottom="50dp"
+        android:layout_above="@+id/animal_easy"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
     <Button
         android:id="@+id/black_8e"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/red_8e"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_gravity="center_horizontal"
-        android:layout_toEndOf="@+id/animal_easy"
-        android:layout_toRightOf="@+id/animal_easy"
         android:background="@drawable/button_black"
         android:contextClickable="true"
         android:text="8"
         android:textColor="#FF00FFD4"
         android:textSize="25dp"
-        android:onClick="onClickEasy" />
+        android:onClick="onClickEasy"
+        android:layout_alignTop="@+id/red_8e"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:id="@+id/blue_8e"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/red_8e"
-        android:layout_alignStart="@+id/red_8e"
-        android:layout_below="@+id/red_8e"
-        android:layout_marginTop="58dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:background="@drawable/button_blue"
         android:contextClickable="true"
         android:text="8"
         android:textColor="#FF00FFD4"
         android:textSize="25dp"
-        android:onClick="onClickEasy" />
+        android:onClick="onClickEasy"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/green_8e"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_alignLeft="@+id/black_8e"
         android:layout_alignStart="@+id/black_8e"
         android:layout_alignTop="@+id/blue_8e"
@@ -77,25 +75,25 @@
 
     <Button
         android:id="@+id/pink_8e"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/blue_8e"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="57dp"
-        android:layout_toLeftOf="@+id/animal_easy"
-        android:layout_toStartOf="@+id/animal_easy"
         android:background="@drawable/button_pink"
         android:contextClickable="true"
         android:text="8"
         android:textColor="#FF00FFD4"
         android:textSize="25dp"
-        android:onClick="onClickEasy" />
+        android:onClick="onClickEasy"
+        android:layout_marginBottom="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
 
         android:id="@+id/white_8e"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_alignBottom="@+id/pink_8e"
         android:layout_alignLeft="@+id/green_8e"
         android:layout_alignStart="@+id/green_8e"
