--- a/LearningToListen/app/src/main/res/layout/activity_medium_mode.xml
+++ b/LearningToListen/app/src/main/res/layout/activity_medium_mode.xml
@@ -16,14 +16,14 @@
         android:id="@+id/animal_medium"
         android:layout_width="90dp"
         android:layout_height="150dp"
-        android:layout_centerHorizontal="true"
+        android:src="@drawable/dog_medium_mode"
         android:layout_centerVertical="true"
-        android:src="@drawable/dog_medium_mode" />
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/red_8"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_below="@+id/blue_8"
         android:layout_toLeftOf="@+id/blue_8"
         android:layout_toStartOf="@+id/blue_8"
@@ -36,8 +36,8 @@
 
     <Button
         android:id="@+id/blue_8"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_below="@+id/animal_medium"
         android:layout_toLeftOf="@+id/animal_medium"
         android:layout_toStartOf="@+id/animal_medium"
@@ -50,8 +50,8 @@
 
     <Button
         android:id="@+id/black_8"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_alignBottom="@+id/animal_medium"
         android:layout_alignLeft="@+id/red_8"
         android:layout_alignStart="@+id/red_8"
@@ -64,8 +64,8 @@
 
     <Button
         android:id="@+id/white_8"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_above="@+id/animal_medium"
         android:layout_toLeftOf="@+id/animal_medium"
         android:layout_toRightOf="@+id/blue_8"
@@ -79,8 +79,8 @@
 
     <Button
         android:id="@+id/pink_8"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_above="@+id/black_8"
         android:layout_toLeftOf="@+id/animal_medium"
         android:layout_toStartOf="@+id/animal_medium"
@@ -93,8 +93,8 @@
 
     <Button
         android:id="@+id/green_8"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_below="@+id/white_8"
         android:layout_toLeftOf="@+id/pink_8"
         android:layout_toStartOf="@+id/pink_8"
@@ -107,8 +107,8 @@
 
     <Button
         android:id="@+id/red_2"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_below="@+id/blue_8"
         android:layout_toEndOf="@+id/blue_2"
         android:layout_toRightOf="@+id/blue_2"
@@ -121,8 +121,8 @@
 
     <Button
         android:id="@+id/blue_2"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_alignLeft="@+id/white_2"
         android:layout_alignStart="@+id/white_2"
         android:layout_below="@+id/black_2"
@@ -135,8 +135,8 @@
 
     <Button
         android:id="@+id/black_2"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_above="@+id/blue_8"
         android:layout_toEndOf="@+id/blue_2"
         android:layout_toRightOf="@+id/blue_2"
@@ -149,8 +149,8 @@
 
     <Button
         android:id="@+id/white_2"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_above="@+id/animal_medium"
         android:layout_toEndOf="@+id/animal_medium"
         android:layout_toRightOf="@+id/animal_medium"
@@ -163,8 +163,8 @@
 
     <Button
         android:id="@+id/pink_2"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_above="@+id/black_2"
         android:layout_toEndOf="@+id/animal_medium"
         android:layout_toRightOf="@+id/animal_medium"
@@ -177,8 +177,8 @@
 
     <Button
         android:id="@+id/green_2"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_above="@+id/pink_2"
         android:layout_toEndOf="@+id/pink_2"
         android:layout_toRightOf="@+id/pink_2"
