--- a/LearningToListen/app/src/main/res/layout/activity_hard_mode.xml
+++ b/LearningToListen/app/src/main/res/layout/activity_hard_mode.xml
@@ -22,26 +22,26 @@
 
     <Button
         android:id="@+id/hard_0"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_below="@+id/hard_1"
         android:layout_toLeftOf="@+id/hard_1"
         android:layout_toStartOf="@+id/hard_1"
         android:clickable="true"
         android:onClick="onClickHard"
-        android:textColor="#FCFF35"
+        android:textColor="#FF00FFD4"
         android:textSize="28dp" />
 
     <Button
         android:id="@+id/hard_1"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_below="@+id/animal_hard"
         android:layout_toLeftOf="@+id/animal_hard"
         android:layout_toStartOf="@+id/animal_hard"
         android:clickable="true"
         android:onClick="onClickHard"
-        android:textColor="#FCFF35"
+        android:textColor="#FF00FFD4"
         android:textSize="28dp" />
 
     <Button
@@ -53,116 +53,116 @@
         android:layout_alignStart="@+id/hard_0"
         android:clickable="true"
         android:onClick="onClickHard"
-        android:textColor="#FCFF35"
+        android:textColor="#FF00FFD4"
         android:textSize="28dp" />
 
     <Button
         android:id="@+id/hard_3"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_above="@+id/animal_hard"
         android:layout_toLeftOf="@+id/animal_hard"
         android:layout_toRightOf="@+id/hard_1"
         android:layout_toStartOf="@+id/animal_hard"
         android:clickable="true"
         android:onClick="onClickHard"
-        android:textColor="#FCFF35"
+        android:textColor="#FF00FFD4"
         android:textSize="28dp" />
 
     <Button
         android:id="@+id/hard_4"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_above="@+id/hard_2"
         android:layout_toLeftOf="@+id/animal_hard"
         android:layout_toStartOf="@+id/animal_hard"
         android:clickable="true"
         android:onClick="onClickHard"
-        android:textColor="#FCFF35"
+        android:textColor="#FF00FFD4"
         android:textSize="28dp" />
 
     <Button
         android:id="@+id/hard_5"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_below="@+id/hard_3"
         android:layout_toLeftOf="@+id/hard_4"
         android:layout_toStartOf="@+id/hard_4"
         android:clickable="true"
         android:onClick="onClickHard"
-        android:textColor="#FCFF35"
+        android:textColor="#FF00FFD4"
         android:textSize="28dp" />
 
     <Button
         android:id="@+id/hard_6"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_below="@+id/hard_1"
         android:layout_toEndOf="@+id/hard_7"
         android:layout_toRightOf="@+id/hard_7"
         android:clickable="true"
         android:onClick="onClickHard"
-        android:textColor="#FCFF35"
+        android:textColor="#FF00FFD4"
         android:textSize="28dp" />
 
     <Button
         android:id="@+id/hard_7"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignLeft="@+id/hard_9"
         android:layout_alignStart="@+id/hard_9"
         android:layout_below="@+id/hard_8"
         android:clickable="true"
         android:onClick="onClickHard"
-        android:textColor="#FCFF35"
+        android:textColor="#FF00FFD4"
         android:textSize="28dp" />
 
     <Button
         android:id="@+id/hard_8"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_above="@+id/hard_1"
         android:layout_toEndOf="@+id/hard_7"
         android:layout_toRightOf="@+id/hard_7"
         android:clickable="true"
         android:onClick="onClickHard"
-        android:textColor="#FCFF35"
+        android:textColor="#FF00FFD4"
         android:textSize="28dp" />
 
     <Button
         android:id="@+id/hard_9"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_above="@+id/animal_hard"
         android:layout_toEndOf="@+id/animal_hard"
         android:layout_toRightOf="@+id/animal_hard"
         android:clickable="true"
         android:onClick="onClickHard"
-        android:textColor="#FCFF35"
+        android:textColor="#FF00FFD4"
         android:textSize="28dp" />
 
     <Button
         android:id="@+id/hard_10"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_above="@+id/hard_8"
         android:layout_toEndOf="@+id/animal_hard"
         android:layout_toRightOf="@+id/animal_hard"
         android:clickable="true"
         android:onClick="onClickHard"
-        android:textColor="#FCFF35"
+        android:textColor="#FF00FFD4"
         android:textSize="28dp" />
 
     <Button
         android:id="@+id/hard_11"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_above="@+id/hard_10"
         android:layout_toEndOf="@+id/hard_10"
         android:layout_toRightOf="@+id/hard_10"
         android:clickable="true"
         android:onClick="onClickHard"
-        android:textColor="#FCFF35"
+        android:textColor="#FF00FFD4"
         android:textSize="28dp" />
 
 
